# voice2article

./: .gitignore  PRD_语音对话公众号生成器_副本.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260506_1124_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  auth.py  conversations.py  deps.py  formatting.py  generations.py  health.py  metrics.py  stt.py
backend/app/core/: __init__.py  errors.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  conversation.py  generation.py  user.py
backend/app/schemas/: __init__.py  conversation.py  formatting.py  generation.py  stt.py  user.py
backend/app/services/: __init__.py  formatting.py  llm.py  prompts.py  stt.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_formatting.py  test_generations.py  test_health.py  test_metrics.py  test_prompts.py  test_stt.py
docs/: DEMO.md  W2-manual-test.md  voice2article.postman_collection.json
frontend/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AudioFileUploader.tsx  AudioRecorder.tsx  FormatModal.tsx  GenerationPanel.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
scripts/: demo-down.sh  demo-up.sh  eval-prompts.py  seed-demo.py  w2-smoke.sh  w4-smoke.sh
(+15 files in other folders)
